--- a/views/partials/_menu.ejs
+++ b/views/partials/_menu.ejs
@@ -4,19 +4,19 @@
 
             <div class=" col-md-2 col-sm-3">
                 <div class="logo">
-                    <a href="index.html">lens<br><span>light</span></a>
+                    <a href="/">lens<br><span>light</span></a>
                 </div>
             </div>
             <div class="col-md-8 col-sm-9">
                 <div class="navbar-area">
                     <nav class="site-navbar">
                         <ul>
-                            <li><a href="index.html">Home</a></li>
-                            <li><a class="active" href="about.html">About</a></li>
+                            <li><a href="/">Home</a></li>
+                            <li><a href="/about">About</a></li>
                             <li><a href="services.html">Services</a></li>
-                            <li><a href="gallery.html">Gallery</a></li>
+                            <li><a  href="/photos">Photos</a></li>
                             <li><a href="projects.html">Projects</a></li>
-                            <li><a href="blog.html">Blog</a></li>
+                            <li><a href="/blog">Blog</a></li>
                             <li><a href="contact.html">Contact</a></li>
                         </ul>
                         <button class="nav-toggler">
