--- a/views/partials/_menu.ejs
+++ b/views/partials/_menu.ejs
@@ -7,14 +7,16 @@
                     <a href="/">lens<br><span>light</span></a>
                 </div>
             </div>
-            <div class="col-md-8 col-sm-9">
-                <div class="navbar-area">
+            <div class="col-md-109">
+                <div class="navbar-area" style="float:right;">
                     <nav class="site-navbar">
                         <ul>
                             <li><a href="/">Home</a></li>
                             <li><a href="/about">About</a></li>
                             <li><a href="services.html">Services</a></li>
                             <li><a  href="/photos">Photos</a></li>
+                            <li><a href="/register">Register</a></li>
+                             <li><a href="/login">login</a></li>
                             <li><a href="projects.html">Projects</a></li>
                             <li><a href="/blog">Blog</a></li>
                             <li><a href="contact.html">Contact</a></li>
@@ -25,12 +27,12 @@
                     </nav>
                 </div>
             </div>
-            <div class=" col-md-2 di_none">
+            <!-- <div class=" col-md-2 di_none">
                 <ul class="email text_align_right">
                     <li><a href="Javascript:void(0)">Login</a></li>
                     <li><a href="Javascript:void(0)"><i class="fa fa-search" aria-hidden="true"></i></a></li>
                 </ul>
-            </div>
+            </div> -->
         </div>
     </div>
 </header>
